# Carnivores2-GL

./: .gitignore  CMakeLists.txt  README.md  main.cpp  ocarn2_test.cpp  texture_extractor.cpp
app/: CarnivoresApp.cpp  CarnivoresApp.h  SaveData.h  globals.cpp  globals.h
app/Level/: Terrain.cpp  Terrain.h
app/Objects/: Skybox.cpp  Skybox.h  SquareMesh.cpp  SquareMesh.h
app/State/: HuntState.cpp  HuntState.h  IntroState.cpp  IntroState.h
assets/: HUNTDAT
assets/shaders/: frag.glsl  model.fs.glsl  model.vs.glsl  terrain.fs.glsl  terrain.vs.glsl  vert.glsl
core/: App.cpp  App.h  Camera.cpp  Camera.h
core/entity/: Entity.cpp  Entity.h
core/graphics/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
core/gui/: nuklear.cpp  nuklear.h
core/state/: BaseState.cpp  BaseState.h  StateInterface.h  StateMachine.cpp  StateMachine.h
ext/SDL2-win/include/SDL2/: SDL_surface.h
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
ext/nuklear/: nuklear_sdl_gl3.h
